force-app/main/default/objects/Contact/fields/Entertainment__c.field-meta.xml
<CustomField>
    <fullName>Entertainment__c</fullName>
    <label>Entertainment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Games</fullName>
            </value>
            <value>
                <fullName>Live events</fullName>
            </value>
            <value>
                <fullName>Movies</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Fitness and wellness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>