force-app/main/default/objects/Contact/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <label>Food</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese cuisine</fullName>
            </value>
            <value>
                <fullName>French cuisine</fullName>
            </value>
            <value>
                <fullName>German cuisine</fullName>
            </value>
            <value>
                <fullName>Greek cuisine</fullName>
            </value>
            <value>
                <fullName>Indian cuisine</fullName>
            </value>
            <value>
                <fullName>Italian cuisine</fullName>
            </value>
            <value>
                <fullName>Japanese cuisine</fullName>
            </value>
            <value>
                <fullName>Korean cuisine</fullName>
            </value>
            <value>
                <fullName>Latin American cuisine</fullName>
            </value>
            <value>
                <fullName>Mexican cuisine</fullName>
            </value>
            <value>
                <fullName>Middle Eastern cuisine</fullName>
            </value>
            <value>
                <fullName>Spanish cuisine</fullName>
            </value>
            <value>
                <fullName>Thai cuisine</fullName>
            </value>
            <value>
                <fullName>Vietnamese cuisine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>