force-app/main/default/objects/Contact/fields/Hobbies_and_activities__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_and_activities__c</fullName>
    <label>Hobbies and activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arts and music</fullName>
            </value>
            <value>
                <fullName>Current events</fullName>
            </value>
            <value>
                <fullName>Home and garden</fullName>
            </value>
            <value>
                <fullName>Pets</fullName>
            </value>
            <value>
                <fullName>Politics and social issues</fullName>
            </value>
            <value>
                <fullName>Vehicles</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>