force-app/main/default/objects/Contact/fields/Movies__c.field-meta.xml
<CustomField>
    <fullName>Movies__c</fullName>
    <label>Movies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action movies</fullName>
            </value>
            <value>
                <fullName>Animated movies</fullName>
            </value>
            <value>
                <fullName>Anime movies</fullName>
            </value>
            <value>
                <fullName>Bollywood movies</fullName>
            </value>
            <value>
                <fullName>Comedy movies</fullName>
            </value>
            <value>
                <fullName>Documentary movies</fullName>
            </value>
            <value>
                <fullName>Drama movies</fullName>
            </value>
            <value>
                <fullName>Fantasy movies</fullName>
            </value>
            <value>
                <fullName>Horror movies</fullName>
            </value>
            <value>
                <fullName>Musical theatre</fullName>
            </value>
            <value>
                <fullName>Science fiction movies</fullName>
            </value>
            <value>
                <fullName>Thriller movies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>