force-app/main/default/objects/Contact/fields/Shopping__c.field-meta.xml
<CustomField>
    <fullName>Shopping__c</fullName>
    <label>Shopping</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Markets</fullName>
            </value>
            <value>
                <fullName>Toys</fullName>
            </value>
            <value>
                <fullName>Local food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>